--- a/report/resources/references.bib
+++ b/report/resources/references.bib
@@ -324,6 +324,25 @@ ALGORITHMS
     month = feb
 }
 
+
+@article{latency-user-behavior,
+    title={Impact of response latency on user behavior in web search},
+    author={Ioannis Arapakis and Xiao Bai and B. B. Cambazoglu},
+    journal={Proceedings of the 37th international ACM SIGIR conference on Research & development in information retrieval},
+    year={2014},
+    doi={10.1145/2600428.2609627}
+}
+
+@article{impact-latency-user-behavior,
+    title={Understanding and Leveraging the Impact of Response Latency on User Behaviour in Web Search},
+    author={Xiao Bai and Ioannis Arapakis and B. B. Cambazoglu and Ana Freire},
+    journal={ACM Transactions on Information Systems (TOIS)},
+    year={2017},
+    volume={36},
+    pages={1 - 42},
+    doi={10.1145/3106372}
+}
+
 #######################################################################################
 OTHER RESOURCES
 
