--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -2,13 +2,13 @@
 
 \outline{What is the cache and why is it important}
 
-Since the early 2000s, the process of information retrieval has changed fundamentally. Where individuals once relied on libraries, printed newspapers, or other physical media to access information, the advent and widespread adoption of the internet have shifted this process to the digital realm. The deep integration of the internet into everyday life has made information retrieval faster, more convenient, and more central than ever before.
+Since the early 2000s, the process of information retrieval has undergone a fundamental change. Where individuals once relied on libraries, printed newspapers, or other physical media to access information, the advent and widespread adoption of the internet have shifted this process to the digital realm. The deep integration of the internet into everyday life has made information retrieval faster, more convenient, and more central than ever before.
 
-This shift has resulted in a rapidly increasing volume of web traffic ("WWW traffic"), thus placing enormous pressure on web systems to deliver content quickly and reliably \cite{web-cache-overview}. In fact, recent market research suggests that "fixed" web traffic will more than double by 2030 \cite{digital-global-report}. One critical technique used to meet these demands is to reduce network latency through \keyword{web caching} - the temporary storage of frequently accessed data closer to users or in faster-access locations, which reduces server load, minimizes bandwidth consumption, and improves the perceived latency by the end user \cite{latency-caching, web-cache-overview}.
+This shift has resulted in a rapidly increasing volume of web traffic ("WWW traffic"), thus placing enormous pressure on web systems to deliver content quickly and reliably \cite{web-cache-overview}. In fact, recent market research suggests that fixed web traffic will more than double by 2030 \cite{digital-global-report}. One critical technique used to meet these demands is to reduce network latency through \keyword{web caching} - the temporary storage of frequently accessed data closer to users or in faster-access locations, which reduces server load, minimizes bandwidth consumption, and improves the perceived latency by the end user \cite{latency-caching, web-cache-overview}. 
 
 \outline{How does the cache decide what to evict $\Rightarrow$ introduce cache eviction policies}
 
-Cache systems are designed with the speed of delivery at their core; however, the storage capacity of such systems is scarce. To manage this tradeoff between speed and space constraints effectively, caches implement a strategy to manage stored items, effectively deciding on which items to "throw out", or evict, when storage runs out. These strategies are known as \keyword{cache eviction algorithms} or \keyword{cache replacement policies} \cite{web-cache-overview}.
+Cache systems are designed with speed of delivery at their core; however, their storage capacity is limited. To manage this tradeoff between speed and space constraints effectively, caches implement a strategy to manage stored items, effectively deciding which items to "throw out" or evict when storage is full. These strategies are known as \keyword{cache eviction algorithms} or \keyword{cache replacement policies} \cite{web-cache-overview}.
 
 
 \outline{Different types of cache eviction algorithms. Not all are used in practice}
@@ -20,9 +20,7 @@ Choosing an appropriate cache eviction algorithm for a given system requires an 
 
 \outline{Something about increased complexity of newer algorithms compared to older ones?}
 
-\TODO{add something here about the uncertainty of distributions IRL because of the big lack of open-source production cache traces}
-
-The continuous increase in web traffic \cite{digital-global-report} necessitates further exploration of cache eviction algorithms to optimize web cache utilization. Concurrently, it has been observed that newer cache eviction algorithms exhibit increased complexity \cite{sieve, s3-fifo}. \citeauthor{sieve} highlight the importance of simplicity as a "key appealing feature for an algorithm to be deployed in production since it commonly correlates with effectiveness, maintainability, scalability, and low overhead" \cite{sieve}. Increased algorithm complexity introduces a host of issues, such as debugging difficulties, decreased efficiency, reduced throughput, scalability challenges due to greater per-object metadata requirements, and complexities in parameter tuning for newer machine learning-based algorithms.
+The continuous increase in web traffic \cite{digital-global-report} necessitates further exploration of cache eviction algorithms to optimize web cache utilization. Concurrently, researchers have observed that the newer cache eviction algorithms are too complex \cite{sieve, s3-fifo}. \citeauthor{sieve} \cite{sieve} highlight the importance of simplicity as a "key appealing feature for an algorithm to be deployed in production since it commonly correlates with effectiveness, maintainability, scalability, and low overhead" \cite{sieve}. The authors found that increased algorithm complexity introduces a range of issues, including debugging difficulties, decreased efficiency, reduced throughput, scalability challenges due to increased per-object metadata requirements, and complexities in parameter tuning for newer machine learning-based algorithms.
 
 In addition to highlighting the increased complexity of recently developed algorithms, \citeauthor{sieve} introduce SIEVE, a novel cache eviction algorithm they claim "achieves both simplicity and efficiency" \cite{sieve}. More than just a typical cache eviction algorithm, SIEVE functions as a \keyword{turn-key cache primitive}: a basic, pre-built, and easy-to-use caching mechanism designed for minimal configuration and seamless integration into larger caching systems. Other cache-primitives that are widely used in today's cache systems include the well-known LRU and FIFO algorithms \cite{sieve, s3-fifo}.
 
@@ -31,7 +29,7 @@ In addition to highlighting the increased complexity of recently developed algor
 
 \outline{Cache primitives, SIEVE vs LRU and FIFO, miss ratio}
 
-This research primarily aims to examine the effectiveness of \citeauthor{sieve}'s recent SIEVE turn-key cache primitive on workloads exhibiting Zipf-like distributions. We will compare its performance against the older cache primitives, LRU and FIFO. Additionally, we further assess the effectiveness of the different primitives across differences in parameters such as the Zipfian skewness parameter $\alpha$ and the relative cache size. Ultimately, this work seeks to determine whether SIEVE is sufficiently competitive to be considered a viable, or even preferred, alternative to LRU and FIFO in production systems exhibiting Zipf-like access patterns. Performance is evaluated using the miss ratio as the primary comparative metric, and web traces used in this work are generated synthetically by sampling from Zipfian distributions.
+This research primarily aims to examine the effectiveness of \citeauthor{sieve}'s \cite{sieve} recent SIEVE turn-key cache primitive on workloads exhibiting Zipf-like distributions. We will compare its performance with that of the older cache primitives, LRU and FIFO. Additionally, we further assess the effectiveness of the different primitives across different parameters, such as the Zipfian skewness parameter $\alpha$ and the relative cache size. Ultimately, this work aims to determine whether SIEVE is sufficiently competitive to be considered a viable or even preferred alternative to LRU and FIFO in production systems exhibiting Zipf-like access patterns. Performance is evaluated using the miss ratio as the comparative metric, and web traces used in this work are generated synthetically by sampling from Zipfian distributions.
 
 
 % How do SIEVE compare to existing cache primitives? Is it competitive enough to be considered as a real competitor to widely used cache primitives LRU and FIFO?
@@ -42,4 +40,4 @@ This research primarily aims to examine the effectiveness of \citeauthor{sieve}'
 
 \section{Thesis Outline}
 
-This section provides a roadmap for the contents of this work. The first chapter, \nameref{chapter:introduction}, introduces the research topic and defines the problem statement and research goals. Following this, \nameref{chapter:background} establishes the theoretical foundation by reviewing key concepts such as web caching, cache eviction primitives, and Zipfian distributions. The methodology is then detailed across two chapters: \nameref{chapter:design}, which describes the implementation of the cache simulator, and \nameref{chapter:experimental-setup}, which outlines the specific parameters and process used for the simulations. The findings of these experiments are presented objectively in \nameref{chapter:results}, followed by a critical interpretation in \nameref{chapter:discussion}. Finally, \nameref{chapter:conclusion} summarizes the main contributions of the work and suggests clear directions for future research.
+This section provides a roadmap for the contents of this work. The first chapter, \nameref{chapter:introduction}, introduces the research topic, defines the problem statement, and outlines the research goals. Following this, \nameref{chapter:background} establishes the theoretical foundation by reviewing key concepts, including web caching, cache eviction primitives, and Zipfian distributions. The methodology is then detailed across two chapters: \nameref{chapter:design}, which describes the implementation of the cache simulator, and \nameref{chapter:experimental-setup}, which outlines the specific parameters and process used for the simulations. The findings of these experiments are presented in \nameref{chapter:results}, followed by a critical interpretation in \nameref{chapter:discussion}. Finally, \nameref{chapter:conclusion} summarizes the main contributions of the work and suggests some directions for future research.
